--- a/FI.WebAtividadeEntrevista/Views/Home/Index.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Home/Index.cshtml
@@ -1,24 +1,29 @@
-﻿@{
+@{
     ViewBag.Title = "Home Page";
 }
 
 <main>
-    <section class="row" aria-labelledby="aspnetTitle">
+    <section class="row text-center" aria-labelledby="aspnetTitle">
         <h1 id="title">Unique Customer System</h1>
-        <p class="lead">Sistema para cadastro de clientes, de uma maneira simples.</p>
-        
-    </section>
+        <p class="lead">System for customer registration, in a simple way.</p>
+
+    </section><br><br><br><br>
 
     <div class="row">
-        <section class="col-md-12" aria-labelledby="gettingStartedTitle">
+        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
             <p>
-                O Unique Customer System é uma solução inovadora desenvolvida para simplificar e otimizar a gestão de clientes.
-                Com uma interface intuitiva e funcionalidades avançadas, nosso sistema permite que as empresas gerenciem suas informações de
-                clientes de maneira eficiente e segura. Desde o cadastro inicial até a atualização de dados e gestão de históricos,
-                o Unique Customer System oferece ferramentas robustas para assegurar que cada interação com o cliente seja registrada e
-                acessível de forma rápida e organizada. Ideal para empresas que buscam aprimorar a experiência do cliente e maximizar a
-                eficiência operacional, o Unique Customer System é a escolha certa para transformar a forma como você gerencia seu negócio.
+                The Unique Customer System is an innovative solution developed to simplify and optimize customer management. With an intuitive interface and advanced functionalities, our system allows companies to manage their customer information efficiently and securely.
             </p>
-        </section>        
+        </section>
+        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
+            <p>
+                From initial registration to data updating and history management, the Unique Customer System offers robust tools to ensure that each customer interaction is recorded and accessible in a quick and organized way.
+            </p>
+        </section>
+        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
+            <p>
+                Ideal for companies looking to improve the customer experience and maximize operational efficiency, the Unique Customer System is the right choice to transform the way you manage your business.
+            </p>
+        </section>
     </div>
 </main>
